--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js --ignore client",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm i"
   },
-  "author": "Harshul Jain",
+  "author": "Harshul",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
