--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,5 +52,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://edulink-backend.onrender.com:10000"
+  
 }
