--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://edulink-backend.onrender.com"
+  "proxy": "http://localhost:5000"
   
 }
